Refactor index.html for clarity and comments
Removed unnecessary comment about avatar and improved text clarity.

--- a/index.html
+++ b/index.html
@@ -624,7 +624,6 @@
         <div class="hero-card">
           <div class="hero-top">
             <div class="hero-avatar">
-              <!-- Avatar: ta photo -->
               <img src="mujtaba.png" alt="Portrait de Mujtaba">
             </div>
             <div class="hero-name-block">
@@ -753,7 +752,7 @@
             <div class="slide-text">
               Michael Smith est un chimiste canadien-britannique qui a reçu le
               prix Nobel de chimie en 1993 pour ses travaux sur la mutagenèse
-              dirigée de l’ADN. Ses recherches ont eu un rôle clé dans le
+              dirigée de l’ADN. Ses recherches ont joué un rôle clé dans le
               développement de la biologie moléculaire moderne.
             </div>
           </div>
@@ -809,7 +808,7 @@
       </div>
     </section>
 
-    <!-- VIDEO (facultatif, à modifier plus tard si tu as une vidéo) -->
+    <!-- VIDEO (facultatif) -->
     <section id="video">
       <div class="section-tag">Vidéo</div>
       <h2><span class="icon">🎬</span> Vidéo de présentation</h2>
